[tool.poetry]
name = "team2-proj"
version = "0.1.0"
description = ""
authors = ["ZacSchepis <schezack@isu.edu>", "AustinWard <austinward@isu.edu"]
readme = "README.md"

[tool.poetry.scripts]
space = "team2_proj.space:main"

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.19.4"
requests = "^2.31.0"
jsonify = "^0.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
