[tool.poetry]
name = "team2-proj"
version = "0.1.0"
description = ""
authors = ["ZacSchepis <schezack@isu.edu>", "AustinWard <austinward@isu.edu"]
readme = "README.md"

[tool.poetry.scripts]
space = "team2_proj.space:main"

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.19.4"
requests = "^2.31.0"
jsonify = "^0.5"
quart-cors = "^0.7.0"
anyio = "^4.3.0"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"
pytest-twisted = "^1.14.1"
twisted = "^24.3.0"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
